--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - name: Run tests
-        run: Cargo test
+        run: cargo test
 
   fmt:
     name: Rustfmt
