--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "newsletter"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "newsletter"
 
 [dependencies]
 actix-web = "4.9.0"
+reqwest = "0.12.8"
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
